--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>about tsunami</title>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" />
-	<link rel="stylesheet" href="/css/fancybox-demo.css" />
+	<link rel="stylesheet" href="./css/jquery.fancybox.min.css" />
+	<link rel="stylesheet" href="./css/fancybox-demo.css" />
 	<link rel="shortcut icon" href="https://howdoiplay.com/assets/media/icons/favicon.ico">
 </head>
 <body>
@@ -19,28 +19,28 @@
 </p>
 
 <p>
-  <a href="/images/tsunamiSL1.jpg" data-fancybox="images">
-      <img src="/images/tsunamiSL1t.jpg" />
+  <a href="./images/tsunamiSL1.jpg" data-fancybox="images">
+      <img src="./images/tsunamiSL1t.jpg" />
   </a>
 
-  <a href="/images/tsunamiSL2.jpg" data-fancybox="images">
-      <img src="/images/tsunamiSL2t.jpg" />
+  <a href="./images/tsunamiSL2.jpg" data-fancybox="images">
+      <img src="./images/tsunamiSL2t.jpg" />
   </a>
 
-  <a href="/images/tsunamiSL3.jpg" data-fancybox="images">
-	<img src="/images/tsunamiSL3t.jpg" />
+  <a href="./images/tsunamiSL3.jpg" data-fancybox="images">
+	<img src="./images/tsunamiSL3t.jpg" />
   </a>
 
-  <a href="/images/tsunamiSL4.jpg" data-fancybox="images">
-	<img src="/images/tsunamiSL4t.jpg" />
+  <a href="./images/tsunamiSL4.jpg" data-fancybox="images">
+	<img src="./images/tsunamiSL4t.jpg" />
   </a>
 
-  <a href="/images/tsunamiSL5.jpg" data-fancybox="images">
-      <img src="/images/tsunamiSL5t.jpg" />
+  <a href="./images/tsunamiSL5.jpg" data-fancybox="images">
+      <img src="./images/tsunamiSL5t.jpg" />
   </a>
 
-  <a href="/images/tsunamiSL6.jpg" data-fancybox="images">
-	<img src="/images/tsunamiSL6t.jpg" />
+  <a href="./images/tsunamiSL6.jpg" data-fancybox="images">
+	<img src="./images/tsunamiSL6t.jpg" />
   </a>
   
 </p>
@@ -52,16 +52,16 @@
   </p>  
 
 <p>
-	<a href="/images/tsunamiGB1.jpg" data-fancybox="images">
-		<img src="/images/tsunamiGB1t.jpg" />
+	<a href="./images/tsunamiGB1.jpg" data-fancybox="images">
+		<img src="./images/tsunamiGB1t.jpg" />
 	</a>
 
-	<a href="/images/tsunamiGB2.jpg" data-fancybox="images">
-		<img src="/images/tsunamiGB2t.jpg" />
+	<a href="./images/tsunamiGB2.jpg" data-fancybox="images">
+		<img src="./images/tsunamiGB2t.jpg" />
 	</a>
 
-	<a href="/images/tsunamiGB3.jpg" data-fancybox="images">
-		<img src="/images/tsunamiGB3t.jpg" />
+	<a href="./images/tsunamiGB3.jpg" data-fancybox="images">
+		<img src="./images/tsunamiGB3t.jpg" />
 	</a>
 	
   </p>
@@ -70,7 +70,7 @@
 
 <!-- JS -->
 <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="/js/jquery.fancybox.min.js"></script>
+<script src="./js/jquery.fancybox.min.js"></script>
 <script>
 $('[data-fancybox="images"]').fancybox({
 	buttons : [
