--- a/index.html
+++ b/index.html
@@ -8,17 +8,41 @@
 	<link rel="stylesheet" href="./css/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="./css/fancybox-demo.css" />
 	<link rel="shortcut icon" href="https://howdoiplay.com/assets/media/icons/favicon.ico">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-	<h2>Neal 'tsunami' Khandheria - <a href="https://twitter.com/tsunami643">@tsunami643</a></h2>
+	<h2>Neal 'tsunami' Khandheria - <img src="./images/usflag.svg" width=50> USA</h2>
+	<p style ="font-size:40px; margin:0;">
+		<a href="https://twitter.com/tsunami643"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://twitch.tv/tsunami643"><i class="fa fa-twitch"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://instagram.com/tsunami643"><i class="fa fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://youtube.com/tsunami643"><i class="fa fa-youtube-play"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://howdoiplay.com"><i class="fa fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+	</p>
+<h3>MDL Disneyland® Paris Major - <a href="https://twitter.com/richlockphoto">Source: Rich Lock</a></h3>
+<p>
+	May 2019
+</p>
 
-<h3>StarLadder ImbaTV Invitational Season 5</h3>
+<p>
+		<a href="./images/tsunamiMDL1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiMDL1t.jpg" />
+		</a>
+		<a href="./images/tsunamiMDL2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiMDL2t.jpg" />
+		</a>
+</p>
 
+<h3>StarLadder ImbaTV Invitational Season 5 - <a href="https://www.flickr.com/people/starladder/">Source: StarLadder Flickr</a></h3>
 <p>
   April 2018
 </p>
 
 <p>
+	<a href="./images/tsunamiSL0.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiSL0t.jpg" />
+	</a>
+	
   <a href="./images/tsunamiSL1.jpg" data-fancybox="images">
       <img src="./images/tsunamiSL1t.jpg" />
   </a>
