--- a/index.html
+++ b/index.html
@@ -19,21 +19,26 @@
 		<a href="https://youtube.com/tsunami643"><i class="fa fa-youtube-play"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com"><i class="fa fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 	</p>
-<h3>MDL Disneyland® Paris Major - <a href="https://twitter.com/richlockphoto">Source: Rich Lock</a></h3>
+<h3>MDL Disneyland® Paris Major - Sources: MDL/<a href="https://twitter.com/richlockphoto">Rich Lock</a>/Self</h3>
 <p>
 	May 2019
 </p>
 
 <p>
-		<a href="./images/tsunamiMDL1.jpg" data-fancybox="images">
+	<a href="./images/tsunamiMDL1.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiMDL1t.jpg" />
-		</a>
-		<a href="./images/tsunamiMDL2.jpg" data-fancybox="images">
+	</a>
+
+	<a href="./images/tsunamiMDL2.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiMDL2t.jpg" />
-		</a>
+	</a>
+
+	<a href="./images/tsunamiMDL3.jpg" data-fancybox="images">
+	  <img src="./images/tsunamiMDL3t.jpg" />
+	</a>
 </p>
 
-<h3>StarLadder ImbaTV Invitational Season 5 - <a href="https://www.flickr.com/people/starladder/">Source: StarLadder Flickr</a></h3>
+<h3>StarLadder ImbaTV Invitational Season 5 - Source: <a href="https://www.flickr.com/people/starladder/">StarLadder Flickr</a></h3>
 <p>
   April 2018
 </p>
@@ -69,7 +74,7 @@
   
 </p>
 
-<h3>Galaxy Battles II: Emerging Worlds</h3>
+<h3>Galaxy Battles II: Emerging Worlds - Sources: Fallout Gaming/Self/Self</h3>
 
   <p>
 	January 2018
