--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
 		<a href="https://youtube.com/tsunami643"><i class="fa fa-youtube-play"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com"><i class="fa fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 	</p>
+
+<h3>Midas Mode 2 - Source: <a href="https://twitter.com/wroadie">Austin Wright</a></h3>
+<p>
+	September 2019
+</p>
+
+<p>
+	<a href="./images/tsunamiMidas1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiMidas1t.jpg" />
+	</a>
+</p>
+
+<h3>The International 2019 - Source: Valve</h3>
+<p>
+	August 2019
+</p>
+
+<p>
+	<a href="./images/tsunamiTI91.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiTI91t.jpg" />
+	</a>
+
+	<a href="./images/tsunamiTI92.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiTI92t.jpg" />
+	</a>
+</p>
+
 <h3>MDL Disneyland® Paris Major - Sources: MDL/<a href="https://twitter.com/richlockphoto">Rich Lock</a>/Self</h3>
 <p>
 	May 2019
