fix desktop styling

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 		<a href="https://youtube.com/tsunami643"><i class="fa fa-youtube-play"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com"><i class="fa fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 	</p>
-
-<h3>Midas Mode 2 - Source: <a href="https://twitter.com/wroadie">Austin Wright</a></h3>
+<div id="wrapper">
+<div id="section">
+<h3>Midas Mode 2 - Source: <a href="https://twitter.com/wroadie">@wroadie</a></h3>
 <p>
 	September 2019
 </p>
@@ -30,7 +31,8 @@
   	  <img src="./images/tsunamiMidas1t.jpg" />
 	</a>
 </p>
-
+</div>
+<div id="section">
 <h3>The International 2019 - Source: Valve</h3>
 <p>
 	August 2019
@@ -45,7 +47,8 @@
   	  <img src="./images/tsunamiTI92t.jpg" />
 	</a>
 </p>
-
+</div>
+<div id="section">
 <h3>MDL Disneyland® Paris Major - Sources: MDL/<a href="https://twitter.com/richlockphoto">Rich Lock</a>/Self</h3>
 <p>
 	May 2019
@@ -64,7 +67,8 @@
 	  <img src="./images/tsunamiMDL3t.jpg" />
 	</a>
 </p>
-
+</div>
+<div id="section">
 <h3>StarLadder ImbaTV Invitational Season 5 - Source: <a href="https://www.flickr.com/people/starladder/">StarLadder Flickr</a></h3>
 <p>
   April 2018
@@ -100,8 +104,9 @@
   </a>
   
 </p>
-
-<h3>Galaxy Battles II: Emerging Worlds - Sources: Fallout Gaming/Self/Self</h3>
+</div>
+<div id="section">
+<h3>Galaxy Battles II: Emerging Worlds - Sources: Fallout Gaming/Self</h3>
 
   <p>
 	January 2018
@@ -121,7 +126,7 @@
 	</a>
 	
   </p>
-  
+</div>
 </div>
 
 <!-- JS -->
