add liquipedia link

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-	<h2>Neal 'tsunami' Khandheria - <img src="./images/usflag.svg" width=50> USA</h2>
+	<h2>Neal <a href="https://liquipedia.net/dota2/Tsunami">'tsunami'</a> Khandheria - <img src="./images/usflag.svg" width=50> USA</h2>
 	<p style ="font-size:40px; margin:0;">
 		<a href="https://twitter.com/tsunami643"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://twitch.tv/tsunami643"><i class="fa fa-twitch"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://instagram.com/tsunami643"><i class="fa fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://youtube.com/tsunami643"><i class="fa fa-youtube-play"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com"><i class="fa fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		
 	</p>
 <div id="wrapper">
 <div id="section">
