--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 	</p>
 <div id="wrapper">
 <div id="section">
+<h3>StarLadder ImbaTV Dota 2 Minor Season 3 - Source: <a href="https://www.flickr.com/people/starladder/">StarLadder Flickr</a></h3>
+<p>
+	March 2020
+</p>
+
+<p>
+	<a href="./images/tsunamiSLt1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiSLt1t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiSLt2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiSLt2t.jpg" />
+	</a>
+</p>
+</div>
+<div id="section">
 <h3>Midas Mode 2 - Source: <a href="https://twitter.com/wroadie">@wroadie</a></h3>
 <p>
 	September 2019
