update to fontawesome 5.13.0

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<link rel="stylesheet" href="./css/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="./css/fancybox-demo.css" />
 	<link rel="shortcut icon" href="https://howdoiplay.com/assets/media/icons/favicon.ico">
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
 	<h2>Neal <a href="https://liquipedia.net/dota2/Tsunami">'tsunami'</a> Khandheria - <img src="./images/usflag.svg" width=50> USA</h2>
 	<p style ="font-size:40px; margin:0;">
-		<a href="https://twitter.com/tsunami643"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="https://twitch.tv/tsunami643"><i class="fa fa-twitch"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="https://instagram.com/tsunami643"><i class="fa fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="https://youtube.com/tsunami643"><i class="fa fa-youtube-play"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="https://howdoiplay.com"><i class="fa fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://twitter.com/tsunami643"><i class="fab fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://twitch.tv/tsunami643"><i class="fab fa-twitch"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://instagram.com/tsunami643"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://youtube.com/tsunami643"><i class="fab fa-youtube"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://howdoiplay.com"><i class="fas fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		
 	</p>
 <div id="wrapper">
