blog and liquipedia links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<a href="https://twitch.tv/tsunami643"><i class="fab fa-twitch"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://instagram.com/tsunami643"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://youtube.com/tsunami643"><i class="fab fa-youtube"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://liquipedia.net/dota2/Tsunami"><i class="fas fa-book-open"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com"><i class="fas fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://howdoiplay.com/blog"><i class="far fa-newspaper"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		
 	</p>
 <div id="wrapper">
