add omega league pictures

--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
 	</p>
 <div id="wrapper">
 <div id="section">
+<h3>OMEGA League - Source: <a href="https://eventphotos.weplay.tv/omegaleague/">WePlay!</a></h3>
+<p>
+	August 2020
+</p>
+
+<p>
+	<a href="./images/tsunamiOmega1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiOmega1t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiOmega2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiOmega2t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiOmega3.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiOmega3t.jpg" />
+	</a>
+</p>
+</div>
+<div id="section">
 <h3>StarLadder ImbaTV Dota 2 Minor Season 3 - Source: <a href="https://www.flickr.com/people/starladder/">StarLadder Flickr</a></h3>
 <p>
 	March 2020
