animajor and dpc pictures

--- a/index.html
+++ b/index.html
@@ -24,7 +24,51 @@
 	</p>
 <div id="wrapper">
 <div id="section">
-<h3>OMEGA League - Source: <a href="https://eventphotos.weplay.tv/omegaleague/">WePlay!</a></h3>
+<h3>WePlay AniMajor - Source: WePlay</h3>
+<p>
+	June 2021
+</p>
+
+<p>
+	<a href="./images/tsunamiAnimajor1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajor1t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiAnimajor2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajor2t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiAnimajor3.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajor3t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiAnimajor4.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajor4t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiAnimajor5.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajor5t.jpg" />
+	</a>
+</p>
+</div>
+<div id="section">
+<h3>Dota Pro Circuit 2021: Season 2 - Source: PGL</h3>
+<p>
+	May 2021
+</p>
+
+<p>
+	<a href="./images/tsunamiDPC1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiDPC1t.jpg" />
+	</a>
+	
+	<a href="./images/tsunamiDPC2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiDPC2t.jpg" />
+	</a>
+</p>
+</div>
+<div id="section">
+<h3>OMEGA League - Source: WePlay</h3>
 <p>
 	August 2020
 </p>
@@ -144,6 +188,7 @@
   
 </p>
 </div>
+<!--
 <div id="section">
 <h3>Galaxy Battles II: Emerging Worlds - Sources: Fallout Gaming/Self</h3>
 
@@ -165,7 +210,7 @@
 	</a>
 	
   </p>
-</div>
+</div>-->
 </div>
 
 <!-- JS -->
