--- a/index.html
+++ b/index.html
@@ -24,12 +24,24 @@
 	</p>
 <div id="wrapper">
 <div id="section">
-<h3>WePlay AniMajor - Source: WePlay</h3>
+<h3>WePlay AniMajor</h3>
 <p>
-	June 2021
+	June 2021 - WePlay
 </p>
 
 <p>
+	<a href="./images/tsunamiAnimajorSet1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajorSet1t.jpg" />
+	</a>
+
+	<a href="./images/tsunamiAnimajorSet2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajorSet2t.jpg" />
+	</a>
+
+	<a href="./images/tsunamiAnimajorSet3.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiAnimajorSet3t.jpg" />
+	</a>
+
 	<a href="./images/tsunamiAnimajor1.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiAnimajor1t.jpg" />
 	</a>
@@ -52,9 +64,9 @@
 </p>
 </div>
 <div id="section">
-<h3>Dota Pro Circuit 2021: Season 2 - Source: PGL</h3>
+<h3>Dota Pro Circuit 2021 CN/SEA Season 2</h3>
 <p>
-	May 2021
+	May 2021 - PGL
 </p>
 
 <p>
@@ -68,19 +80,12 @@
 </p>
 </div>
 <div id="section">
-<h3>OMEGA League - Source: WePlay</h3>
+<h3>OMEGA League</h3>
 <p>
-	August 2020
+	August 2020 - WePlay
 </p>
 
 <p>
-	<a href="./images/tsunamiOmega1.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiOmega1t.jpg" />
-	</a>
-	
-	<a href="./images/tsunamiOmega2.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiOmega2t.jpg" />
-	</a>
 	
 	<a href="./images/tsunamiOmega3.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiOmega3t.jpg" />
@@ -88,9 +93,9 @@
 </p>
 </div>
 <div id="section">
-<h3>StarLadder ImbaTV Dota 2 Minor Season 3 - Source: <a href="https://www.flickr.com/people/starladder/">StarLadder Flickr</a></h3>
+<h3>StarLadder ImbaTV Dota 2 Minor Season 3</h3>
 <p>
-	March 2020
+	March 2020 - <a href="https://www.flickr.com/people/starladder/">StarLadder</a>
 </p>
 
 <p>
@@ -104,9 +109,9 @@
 </p>
 </div>
 <div id="section">
-<h3>Midas Mode 2 - Source: <a href="https://twitter.com/wroadie">@wroadie</a></h3>
+<h3>Midas Mode 2</h3>
 <p>
-	September 2019
+	September 2019 - <a href="https://twitter.com/wroadie">@wroadie</a>
 </p>
 
 <p>
@@ -116,45 +121,9 @@
 </p>
 </div>
 <div id="section">
-<h3>The International 2019 - Source: Valve</h3>
+<h3>StarLadder ImbaTV Invitational Season 5</h3>
 <p>
-	August 2019
-</p>
-
-<p>
-	<a href="./images/tsunamiTI91.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiTI91t.jpg" />
-	</a>
-
-	<a href="./images/tsunamiTI92.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiTI92t.jpg" />
-	</a>
-</p>
-</div>
-<div id="section">
-<h3>MDL Disneyland® Paris Major - Sources: MDL/<a href="https://twitter.com/richlockphoto">Rich Lock</a>/Self</h3>
-<p>
-	May 2019
-</p>
-
-<p>
-	<a href="./images/tsunamiMDL1.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiMDL1t.jpg" />
-	</a>
-
-	<a href="./images/tsunamiMDL2.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiMDL2t.jpg" />
-	</a>
-
-	<a href="./images/tsunamiMDL3.jpg" data-fancybox="images">
-	  <img src="./images/tsunamiMDL3t.jpg" />
-	</a>
-</p>
-</div>
-<div id="section">
-<h3>StarLadder ImbaTV Invitational Season 5 - Source: <a href="https://www.flickr.com/people/starladder/">StarLadder Flickr</a></h3>
-<p>
-  April 2018
+  April 2018 - <a href="https://www.flickr.com/people/starladder/">StarLadder</a>
 </p>
 
 <p>
