--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
-	<h2>Neal <a href="https://liquipedia.net/dota2/Tsunami">'tsunami'</a> Khandheria - <img src="./images/usflag.svg" width=50> USA</h2>
+	<h2>Neal <a href="https://liquipedia.net/dota2/Tsunami">'tsunami'</a> Khandheria</h2>
 	<p style ="font-size:40px; margin:0;">
 		<a href="https://twitter.com/tsunami643"><i class="fab fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://twitch.tv/tsunami643"><i class="fab fa-twitch"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://instagram.com/tsunami643"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://youtube.com/tsunami643"><i class="fab fa-youtube"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://facebook.com/tsunami643"><i class="fab fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://liquipedia.net/dota2/Tsunami"><i class="fas fa-book-open"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com"><i class="fas fa-home"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://howdoiplay.com/blog"><i class="far fa-newspaper"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -93,7 +94,7 @@
 </p>
 </div>
 <div id="section">
-<h3>StarLadder ImbaTV Dota 2 Minor Season 3</h3>
+<h3>StarLadder Minor Season 3</h3>
 <p>
 	March 2020 - <a href="https://www.flickr.com/people/starladder/">StarLadder</a>
 </p>
@@ -102,10 +103,7 @@
 	<a href="./images/tsunamiSLt1.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiSLt1t.jpg" />
 	</a>
-	
-	<a href="./images/tsunamiSLt2.jpg" data-fancybox="images">
-  	  <img src="./images/tsunamiSLt2t.jpg" />
-	</a>
+
 </p>
 </div>
 <div id="section">
