add ti10 pictures

--- a/index.html
+++ b/index.html
@@ -25,6 +25,31 @@
 	</p>
 <div id="wrapper">
 <div id="section">
+<h3>The International 2021</h3>
+<p>
+	October 2021 - Valve
+</p>
+
+<p>
+	<a href="./images/tsunamiTI101.jpg" data-fancybox="images">
+		<img src="./images/tsunamiTI101t.jpg" />
+	</a>
+	<a href="./images/tsunamiTI102.jpg" data-fancybox="images">
+		<img src="./images/tsunamiTI102t.jpg" />
+	</a>
+	<a href="./images/tsunamiTI103.jpg" data-fancybox="images">
+		<img src="./images/tsunamiTI103t.jpg" />
+	</a>
+	<a href="./images/tsunamiTI104.jpg" data-fancybox="images">
+		<img src="./images/tsunamiTI104t.jpg" />
+	</a>
+	<a href="./images/tsunamiTI105.jpg" data-fancybox="images">
+		<img src="./images/tsunamiTI105t.jpg" />
+	</a>
+</p>
+</div>
+
+<div id="section">
 <h3>WePlay AniMajor</h3>
 <p>
 	June 2021 - WePlay
@@ -64,6 +89,7 @@
 	</a>
 </p>
 </div>
+
 <div id="section">
 <h3>Dota Pro Circuit 2021 CN/SEA Season 2</h3>
 <p>
@@ -93,6 +119,7 @@
 	</a>
 </p>
 </div>
+
 <div id="section">
 <h3>StarLadder Minor Season 3</h3>
 <p>
@@ -106,6 +133,7 @@
 
 </p>
 </div>
+
 <div id="section">
 <h3>Midas Mode 2</h3>
 <p>
@@ -118,6 +146,7 @@
 	</a>
 </p>
 </div>
+
 <div id="section">
 <h3>StarLadder ImbaTV Invitational Season 5</h3>
 <p>
@@ -152,7 +181,6 @@
   <a href="./images/tsunamiSL6.jpg" data-fancybox="images">
 	<img src="./images/tsunamiSL6t.jpg" />
   </a>
-  
 </p>
 </div>
 <!--
