--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@
 	</p>
 <div id="wrapper">
 <div id="section">
+<h3>ESL One Stockholm 2022</h3>
+<p>
+	May 2022 - ESL/@alexandra.aimi
+</p>
+
+<p>
+	<a href="./images/tsunamiStockholm1.jpg" data-fancybox="images">
+		<img src="./images/tsunamiStockholm1t.jpg" />
+	</a>
+	<a href="./images/tsunamiStockholm2.jpg" data-fancybox="images">
+		<img src="./images/tsunamiStockholm2t.jpg" />
+	</a>
+	<a href="./images/tsunamiStockholm3.jpg" data-fancybox="images">
+		<img src="./images/tsunamiStockholm3t.jpg" />
+	</a>
+	<a href="./images/tsunamiStockholm4.jpg" data-fancybox="images">
+		<img src="./images/tsunamiStockholm4t.jpg" />
+	</a>
+</p>
+</div>
+
+<div id="section">
 <h3>The International 2021</h3>
 <p>
 	October 2021 - Valve
@@ -50,12 +72,34 @@
 </div>
 
 <div id="section">
+<h3>ESL One Summer 2021</h3>
+<p>
+	June 2021 - ESL
+</p>
+
+<p>
+	<a href="./images/tsunamiESLSummer1.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiESLSummer1t.jpg" />
+	</a>
+
+	<a href="./images/tsunamiESLSummer2.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiESLSummer2t.jpg" />
+	</a>
+
+	<a href="./images/tsunamiESLSummer3.jpg" data-fancybox="images">
+  	  <img src="./images/tsunamiESLSummer3t.jpg" />
+	</a>
+</p>
+</div>
+
+<div id="section">
 <h3>WePlay AniMajor</h3>
 <p>
 	June 2021 - WePlay
 </p>
 
 <p>
+<!--
 	<a href="./images/tsunamiAnimajorSet1.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiAnimajorSet1t.jpg" />
 	</a>
@@ -67,7 +111,7 @@
 	<a href="./images/tsunamiAnimajorSet3.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiAnimajorSet3t.jpg" />
 	</a>
-
+-->
 	<a href="./images/tsunamiAnimajor1.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiAnimajor1t.jpg" />
 	</a>
@@ -100,10 +144,10 @@
 	<a href="./images/tsunamiDPC1.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiDPC1t.jpg" />
 	</a>
-	
+	<!--
 	<a href="./images/tsunamiDPC2.jpg" data-fancybox="images">
   	  <img src="./images/tsunamiDPC2t.jpg" />
-	</a>
+	</a>-->
 </p>
 </div>
 <div id="section">
@@ -119,7 +163,7 @@
 	</a>
 </p>
 </div>
-
+<!--
 <div id="section">
 <h3>StarLadder Minor Season 3</h3>
 <p>
@@ -133,7 +177,7 @@
 
 </p>
 </div>
-
+-->
 <div id="section">
 <h3>Midas Mode 2</h3>
 <p>
@@ -177,10 +221,11 @@
   <a href="./images/tsunamiSL5.jpg" data-fancybox="images">
       <img src="./images/tsunamiSL5t.jpg" />
   </a>
-
+<!--
   <a href="./images/tsunamiSL6.jpg" data-fancybox="images">
 	<img src="./images/tsunamiSL6t.jpg" />
   </a>
+  -->
 </p>
 </div>
 <!--
